# toy-load-balancer

./: .gitignore  Cargo.toml  README.md  config-file.txt
benches/: ha-load-balancer-eight.tsv  haproxy-load-balancer-1K.tsv  haproxy-load-balancer-300K.tsv  nginx-load-balancer-1K.tsv  nginx-load-balancer-300K.tsv  nginx-load-balancer-eight.tsv  toy-load-balancer-1K.tsv  toy-load-balancer-300K.tsv  toy-load-balancer-eight.tsv
config/: default.toml
examples/: server-example.js  server-test.rs
src/: cache.rs  duplex.rs  file_utils.rs  host_resolver.rs  main.rs  proxy.rs  redis_service.rs  request_utils.rs  router.rs  server.rs  server_manager.rs  settings.rs
