[package]
name = "toy-load-balancer"
version = "0.1.0"
authors = ["Cristian Spinetta <cebs91@gmail.com>"]

[dependencies]

log = "0.3"
#env_logger="0.4.3"
pretty_env_logger = "0.1"

hyper = "0.11"

# basic dependencies from echo server before
futures = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

tokio-pool = "0.1"

# our toy HTTP implementation
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }

# json
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"

# misc support for thread pools, random numbers
futures-cpupool = "0.1"
rand = "0.3"
